不具合の修正

--- a/.gitconfig
+++ b/.gitconfig
@@ -7,5 +7,6 @@
 [user]
 	naem = YoshinoriYamaguchi
 	email = b1518292@planet.kanazawa-it.ac.jp
+	name = YoshinoriYamaguchi
 [core]
 	editor = nvim -c \"set fenc=utf-8\"
